# ola-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TRADEMARK.md  deny.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  security.yml
clients/python/: ola_client.py  test_ola_client.py
crates/ola-adapter-demo-fido2/: Cargo.toml  README.md
crates/ola-adapter-demo-fido2/src/: main.rs
crates/ola-core/: Cargo.toml
crates/ola-core/policies/: default.toml
crates/ola-core/src/: config.rs  main.rs
crates/ola-core/src/adapters/: client.rs  config_loader.rs  health.rs  mod.rs  registry.rs
crates/ola-core/src/core/: mod.rs
crates/ola-core/src/core/policy/: evaluator.rs  mod.rs  parser.rs  types.rs
crates/ola-core/src/core/types/: context.rs  decision.rs  method.rs  mod.rs  request.rs  result.rs
crates/ola-core/src/infrastructure/: mod.rs
crates/ola-core/src/infrastructure/audit/: entry.rs  hex.rs  logger.rs  metrics.rs  mod.rs  verifier.rs
crates/ola-core/src/infrastructure/ipc/: mod.rs  protocol.rs  socket_setup.rs  systemd.rs  unix_socket.rs  unix_socket_tests.rs
crates/ola-core/src/security/: allowlist.rs  fs.rs  mod.rs  nonce.rs  privilege.rs  rate_limit.rs  seccomp.rs
crates/ola-core/src/security/attestation/: mod.rs  verifier.rs
crates/ola-core/tests/: integration_test.rs  performance_test.rs  seccomp_test.rs  security_test.rs
crates/ola-core/tests/common/: mod.rs
crates/pam-ola/: Cargo.toml  README.md
crates/pam-ola/src/: lib.rs  unix_connect.rs
demos/: run_pam_fido2_demo.sh
docs/: ARCHITECTURE.md  AUDIT.md  DECISIONS.md  INSTALL.md  PROTOCOL.md  RELATED_WORK.md  ROADMAP.md  THREAT_MODEL.md  VISION.md
scripts/: generate_key.sh  install_production.sh  run_all_tests.sh  verify_everything.sh
