[package]
name = "ola-adapter-demo-fido2"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Hardware-free FIDO2-shaped demo adapter for OLA."
repository.workspace = true

[dependencies]
anyhow = "1.0"
hmac = "0.12"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"

[dev-dependencies]
tempfile = "=3.23.0"
