[package]
name = "ola-core"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Hardened local decision daemon for OLA (Open Linux Authentication)."
repository.workspace = true

[dependencies]
tokio = { version = "1.29", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
nix = { version = "0.27", features = ["user", "socket", "fs"] }
libc = "0.2"
getrandom = "0.3"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
uzers = "0.11"
listenfd = "1.0"
arc-swap = "1.7.1"
caps = "0.5"
seccompiler = "0.4"
prctl = "1.0"
thiserror = "1.0"
subtle = "2.5"

[features]
default = []

[dev-dependencies]
tempfile = "=3.27.0"
